# MQED-QD

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  environment.yaml  environment_windows.yaml  environmental.yaml  pyproject.toml  setup.py
.github/workflows/: tests.yml
configs/BEM/: compare_bem_dyadic.yaml  compare_enhancement.yaml  compare_planar_vs_nanorod.yaml  compare_silver.yaml  compute_peff.yaml  reconstruct_GF.yaml
configs/Dyadic_GF/: GF_Sommerfeld.yaml
configs/Lindblad/: coupling_histogram.yaml  quantum_dynamics.yaml  quantum_dynamics_disorder.yaml  quantum_dynamics_nhse.yaml
configs/analysis/: FE.yaml  RET.yaml  spectral_density.yaml
configs/disorder_nn/: nn_chain.yaml
configs/disorder_nn/hydra/: default.yaml
configs/plots/: ipr.yaml  msd.yaml  plt_spec_dens.yaml  pr.yaml  sqrt_msd.yaml
data/example/BEM_data/: dipole_silver_nanorod_GF_665nm_pos_500_height_8nm_D_20nm_1.xlsx
docs/source/: conf.py  configuration.rst  getting-started.rst  index.rst
docs/source/api/: index.rst  mqed.rst
docs/source/theory/: two_layer.rst
docs/source/tutorials/: BEM-Nanorod.rst  BEM-Reconstruct-GF.rst  BEM-Vacuum.rst  GF_Sommerfeld.rst  index.rst  spectral_density.rst
mqed/BEM/: __init__.py  accuracy_plot.py  compare_BEM_dyadic.py  compare_const.py  compare_enhancement.py  compare_silver.py  compute_peff.py  reconstruct_GF.py  verify_bem_fresnel.py
mqed/BEM/BEM_result/: dipole_silver_planar_height_5nm_results_665nm.xlsx
mqed/BEM/Frensel_result/: result_Ag_2nm_1000nm.hdf5
mqed/BEM/Fresnel_result/: result_Ag_2nm_300nm.hdf5
mqed/Dyadic_GF/: GF_Sommerfeld.py  __init__.py  data_provider.py  gf_sommerfeld_jobarray.sh  gf_sommerfeld_params.tsv  gf_sommerfeld_single_job.sh  main.py
mqed/Lindblad/: __init__.py  coupling_filter.py  ddi_matrix.py  quantum_dynamics.py  quantum_operator.py  run_disorder.py  run_quantum_dynamics.py
mqed/analysis/: FE.py  RET.py  __init__.py  spectral_density.py
mqed/disorder/: angle_disorder_jobarray.sh  angle_sweep_params.tsv  angle_sweep_params_orientation.tsv  jobarray.sh  nn_chain_dynamics.py  nn_compare_analytical.py  nn_disorder.sh  nn_sweep_params.tsv  nn_sweep_params_figure_1.tsv  nn_sweep_params_figure_2.tsv  nn_sweep_params_figure_3.tsv  nn_sweep_params_figure_4.tsv  nn_sweep_params_figure_5.tsv  run_coupling_histogram.py  run_disorder.py  run_disorder_nn.py  sge_script_guide.html  submit_angle_sweep.sh  submit_nn_sweep.sh
mqed/plotting/: __init__.py  plot_ipr.py  plot_msd.py  plot_pr.py  plot_spectral_density.py  plot_sqrt_msd.py
mqed/utils/: BEM_tools.py  dgf_data.py  enhancement.py  hydra_local.py  save_hdf5.py
test/: test_build_grid.py  test_data_provider_models.py  test_ddi.py  test_hydra.py  test_plot_spectral_density.py  test_quantum_dynamics.py
(+48 files in other folders)
