# pyproject.toml

[build-system]
# Tells pip to use setuptools to build your package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mqed"
dynamic = ["version"]
description = "A workflow for calculating dyadic Green's functions in layered media and nanorods, and using them to compute dipole-dipole interactions and quantum dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Guangming Liu" },
]
dependencies = [
    "gitpython>=3.1,<4",
    "h5py>=3.10,<4",
    "hydra-colorlog>=1.2,<2",
    "hydra-core>=1.3,<2",
    "hydra-optuna-sweeper>=1.2,<2",
    "joblib>=1.3,<2",
    "loguru>=0.7,<1",
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "openpyxl>=3.1,<4",
    "optuna>=2.10,<3",
    "pandas>=2,<3",
    "qutip>=5,<6",
    "rich>=13,<15",
    "rootutils>=1,<2",
    "scipy>=1.11,<2",
    "seaborn>=0.13,<1",
    "tqdm>=4.66,<5",
]

[project.urls]
Documentation = "https://mqed-qd.github.io/MQED-QD/index.html"
Repository = "https://github.com/MQED-transport/Macroscopic-Quantum-Electrodynamics"
Issues = "https://github.com/MQED-QD/MQED-QD/issues"

[project.scripts]
mqed_GF_Sommerfeld = "mqed.Dyadic_GF.main:run_simulation"
mqed_RET = "mqed.analysis.RET:main"
mqed_FE = "mqed.analysis.FE:main"
mqed_lindblad = "mqed.Lindblad.run_quantum_dynamics:mqed_lindblad"
mqed_nhse = "mqed.Lindblad.run_quantum_dynamics:mqed_nhse"
mqed_nhse_disorder = "mqed.disorder.run_disorder:run_disorder"
mqed_nn_disorder = "mqed.disorder.run_disorder_nn:run_disorder_nn"
mqed_plot_sqrt_msd = "mqed.plotting.plot_sqrt_msd:main"
mqed_plot_msd = "mqed.plotting.plot_msd:main"
mqed_BEM_compare = "mqed.BEM.compare_const:main"
mqed_BEM_compare_silver = "mqed.BEM.compare_silver:main"
mqed_BEM_compute_peff = "mqed.BEM.compute_peff:main"
mqed_BEM_compare_dyadic = "mqed.BEM.compare_BEM_dyadic:main"
mqed_BEM_reconstruct_GF = "mqed.BEM.reconstruct_GF:main"
mqed_plot_IPR = "mqed.plotting.plot_ipr:main"
mqed_plot_PR = "mqed.plotting.plot_pr:main"
mqed_compare_enhancement = "mqed.BEM.compare_enhancement:main"
mqed_calc_spec_dens = "mqed.analysis.spectral_density:compute_and_save_spectral_density"
mqed_plot_spec_dens = "mqed.plotting.plot_spectral_density:plot_spectral_density"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
configs = ["**/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "mqed.__version__" }

[tool.setuptools.packages.find]
include = ["mqed*", "configs*"]

[tool.pytest.ini_options]
# Configuration for the pytest testing framework (for when you add tests)
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
